<resources>
    <string name="app_name">Caculator</string>
    <string name="title">LifeCycle</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnc">C</string>
    <string name="btne">=</string>
    <string name="btna">+</string>
    <string name="btns">-</string>
    <string name="btnm">*</string>
    <string name="btnd">/</string>
    <string name="btnCE">CE</string>
    <string name="mn">+/-</string>
    <string name="btnBS">BS</string>
    <string name="phay">.</string>
</resources>