<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtScreen"
        android:layout_width="406dp"
        android:layout_height="72dp"
        android:text="@string/title"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDivide"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiply"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCE"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btnCE"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/btnC"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button9"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btn4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button10"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btn1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button11"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/mn"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button14"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btn0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button19" />

    <Button
        android:id="@+id/button13"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btn2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button17" />

    <Button
        android:id="@+id/button12"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btn5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toStartOf="@+id/button15" />

    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btn8"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toStartOf="@+id/button7" />

    <Button
        android:id="@+id/btnC"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btnc"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/btnBS" />

    <Button
        android:id="@+id/btnBS"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btnBS"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/btnDivide" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btn9"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiply" />

    <Button
        android:id="@+id/button15"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btn6"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button17"
        app:layout_constraintEnd_toStartOf="@+id/btnSubtract" />

    <Button
        android:id="@+id/button17"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginEnd="3dp"
        android:text="@string/btn3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button19"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd" />

    <Button
        android:id="@+id/button19"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginEnd="3dp"
        android:text="@string/phay"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEquals" />

    <Button
        android:id="@+id/btnEquals"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btne"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnAdd"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btna"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEquals"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSubtract"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btns"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnMultiply"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btnm"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSubtract"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/btn7"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/btnC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtScreen" />

</androidx.constraintlayout.widget.ConstraintLayout>